# napkin-calc

./: .gitignore  README.md  pyproject.toml  run.ps1
.github/workflows/: build.yml
src/napkin_calc/: __init__.py  main.py
src/napkin_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/napkin_calc/core/: constants.py  data_converter.py  dbp_calculator.py  engine.py  time_converter.py
src/napkin_calc/formatting/: display_formatter.py  talking_points.py
src/napkin_calc/persistence/: scenario_manager.py
src/napkin_calc/resources/: icon.icns
src/napkin_calc/ui/: data_volume_panel.py  dbp_panel.py  main_window.py  reference_panel.py  theme.py  traffic_panel.py  widgets.py
tests/: test_data_converter.py  test_dbp_calculator.py  test_display_formatter.py  test_engine.py  test_scenario_manager.py  test_talking_points.py  test_time_converter.py
